--- a/SelNewFramework/ObjectRepository/object.properties
+++ b/SelNewFramework/ObjectRepository/object.properties
@@ -14,6 +14,17 @@ selectIndustry=xpath:.//select[@id='industry-select']
 selectSpecility:xpath:.//select[@id='specialty-select']
 NextTwo:xpath:.//div[@class='form-button next-two']
 
+firstName:xpath:.//input[@name='FirstName']
+surName:xpath:.//input[@name='LastName']
+jobTitle:xpath:.//input[@id='Title']
+emailAddress:xpath:.//input[@id='Email']
+company:xpath:.//input[@id='Company']
+phoneNum:xpath:.//input[@id='Phone']
+Industry:xpath:.//select[@id='Core_Vertical__c']
+Region:xpath:.//select[@id='region']
+InfoSend:xpath:.//input[@id='singleOptIn']
+annualRevenue:xpath:.//select[@id='AnnualRevenue']
+comments:xpath:.//textarea[@id='Comments__c']
 
 
 
