--- a/SelNewFramework/ObjectRepository/object.properties
+++ b/SelNewFramework/ObjectRepository/object.properties
@@ -25,6 +25,8 @@ Region:xpath:.//select[@id='region']
 InfoSend:xpath:.//input[@id='singleOptIn']
 annualRevenue:xpath:.//select[@id='AnnualRevenue']
 comments:xpath:.//textarea[@id='Comments__c']
+btnsubmmit:xpath:.//button[@type='submit']
+btnsubmmit1:xpath:.////button[@type='submit']
 
 
 
